{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 58,
  "lineage": "194558b8-19f2-81b0-96aa-f06de07d65e4",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "livekit_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/regions/us-central1/instanceGroups/livekit-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-05-13T06:29:49.928-07:00",
            "enable_cdn": false,
            "fingerprint": "VcwWO9BXT6Y=",
            "generated_id": 479952548135551522,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/healthChecks/livekit-tcp-health"
            ],
            "id": "projects/project-0f0aa45c-bb59-45f2-9dc/global/backendServices/livekit-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "livekit-backend",
            "port_name": "livekit-tcp",
            "project": "project-0f0aa45c-bb59-45f2-9dc",
            "protocol": "TCP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/backendServices/livekit-backend",
            "session_affinity": "NONE",
            "timeout_sec": 3600
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_health_check.livekit_health_check",
            "google_compute_health_check.livekit_tcp_health",
            "google_compute_instance_template.livekit_node",
            "google_compute_network.livekit_vpc",
            "google_compute_region_instance_group_manager.livekit_mig",
            "google_compute_subnetwork.livekit_subnet",
            "google_redis_instance.livekit_redis",
            "google_service_account.livekit_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-20T21:23:10.018-07:00",
            "deny": [],
            "description": "Allow health checks from GCP",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-0f0aa45c-bb59-45f2-9dc/global/firewalls/allow-health-checks",
            "log_config": [],
            "name": "allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/networks/livekit-vpc",
            "priority": 1000,
            "project": "project-0f0aa45c-bb59-45f2-9dc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/firewalls/allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "livekit-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.livekit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_livekit_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "7880"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-04-20T21:23:10.186-07:00",
            "deny": [],
            "description": "Allow TCP traffic from Load Balancer to LiveKit nodes",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-0f0aa45c-bb59-45f2-9dc/global/firewalls/allow-livekit-tcp",
            "log_config": [],
            "name": "allow-livekit-tcp",
            "network": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/networks/livekit-vpc",
            "priority": 1000,
            "project": "project-0f0aa45c-bb59-45f2-9dc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/firewalls/allow-livekit-tcp",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "livekit-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.livekit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_livekit_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "50000-60000"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2026-04-20T21:23:10.175-07:00",
            "deny": [],
            "description": "Allow UDP traffic for video/audio (50000-60000)",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/project-0f0aa45c-bb59-45f2-9dc/global/firewalls/allow-livekit-udp",
            "log_config": [],
            "name": "allow-livekit-udp",
            "network": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/networks/livekit-vpc",
            "priority": 1000,
            "project": "project-0f0aa45c-bb59-45f2-9dc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/firewalls/allow-livekit-udp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "livekit-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.livekit_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "livekit_lb_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "136.110.167.210",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2026-04-20T21:33:40.022-07:00",
            "id": "projects/project-0f0aa45c-bb59-45f2-9dc/global/addresses/livekit-lb-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "livekit-lb-ip",
            "prefix_length": 0,
            "project": "project-0f0aa45c-bb59-45f2-9dc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/addresses/livekit-lb-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "livekit_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/project-0f0aa45c-bb59-45f2-9dc/global/forwardingRules/livekit-tcp-forwarding",
            "ip_address": "136.110.167.210",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "livekit-tcp-forwarding",
            "port_range": "7880-7880",
            "project": "project-0f0aa45c-bb59-45f2-9dc",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/forwardingRules/livekit-tcp-forwarding",
            "target": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/targetTcpProxies/livekit-tcp-proxy"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_backend_service.livekit_backend",
            "google_compute_global_address.livekit_lb_ip",
            "google_compute_health_check.livekit_health_check",
            "google_compute_health_check.livekit_tcp_health",
            "google_compute_instance_template.livekit_node",
            "google_compute_network.livekit_vpc",
            "google_compute_region_instance_group_manager.livekit_mig",
            "google_compute_subnetwork.livekit_subnet",
            "google_compute_target_tcp_proxy.livekit_proxy",
            "google_redis_instance.livekit_redis",
            "google_service_account.livekit_sa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "livekit_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/project-0f0aa45c-bb59-45f2-9dc/global/networks/livekit-vpc",
            "mtu": 0,
            "name": "livekit-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7204053029246158199",
            "project": "project-0f0aa45c-bb59-45f2-9dc",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/networks/livekit-vpc"
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "livekit_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-04-20T21:23:10.255-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/project-0f0aa45c-bb59-45f2-9dc/regions/us-central1/subnetworks/livekit-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "livekit-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/global/networks/livekit-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "project-0f0aa45c-bb59-45f2-9dc",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/project-0f0aa45c-bb59-45f2-9dc/regions/us-central1/subnetworks/livekit-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.livekit_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}